--- a/.pip/pip.conf
+++ b/.pip/pip.conf
@@ -1,4 +1,8 @@
 [global]
 timout = 3600
-download_cache = ~/.cache/pip
-# choose a pypi mirror from http://www.pypi-mirrors.org/
+trusted-host = pypi.iad.openstack.org
+index-url = http://pypi.iad.openstack.org/simple
+#trusted-host = mirrors.aliyun.com
+#index-url = http://mirrors.aliyun.com/pypi/simple
+#index-url = http://pypi.douban.com/simple
+# or choose a pypi mirror from http://www.pypi-mirrors.org/
